--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -4,6 +4,7 @@
     android:layout_height="100dp"
     android:clickable="true"
     android:focusable="true"
+    app:cardCornerRadius="0dp"
     app:cardBackgroundColor="#ffffff"
     android:foreground="?selectableItemBackground"
     xmlns:tools="http://schemas.android.com/tools">
@@ -73,6 +74,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:padding="1dp"
             android:background="@color/ltgray"
             app:layout_constraintBottom_toBottomOf="parent">
 
