--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -22,5 +22,5 @@
     <color name="text_color">#000</color>
     <color name="theme_primary_dark">#04561A</color>
     <color name="theme_accent">#f9aa33</color>
-    <color name="ltgray">#ffe0e0e0</color>
+    <color name="ltgray">#ededed</color>
 </resources>
