--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -9,7 +9,7 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_backdrop_height"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:theme="@style/ThemeOverlay.AppCompat"
         android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -27,7 +27,6 @@
                 android:layout_marginLeft="@dimen/list_toolbar_side_margin"
                 android:layout_marginRight="@dimen/list_toolbar_side_margin"
                 android:layout_width="match_parent"
-                android:background="@color/theme_primary"
                 android:layout_height="?actionBarSize"
                 android:layout_gravity="bottom"/>
 
